# openrelik-worker-extraction

./: Dockerfile  README.md  openrelik.yaml  pyproject.toml
.github/workflows/: docker-image-staging.yaml  docker-image.yml
src/: app.py  archives.py  extract_archive.py  image_export.py  image_export_artifact.py  image_export_file.py  utils.py
