[tool.poetry]
name = "openrelik-worker-artifact-extraction"
version = "2024.11.27"
description = "Extract forensic artifacts with image_export"
authors = ["Ramses de Beer <ramsesdebeer@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
celery = {extras = ["redis"], version = "^5.4.0"}
openrelik-worker-common = "^2024.11.27"
debugpy = "^1.8.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
