[tool.poetry]
name = "openrelik-worker-artifact-extraction"
version = "0.4.0"
description = "Extract forensic artifacts with image_export"
authors = ["Ramses de Beer <ramsesdebeer@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
celery = { extras = ["redis"], version = "^5.4.0" }
openrelik-worker-common = "^0.13.0"
debugpy = "^1.8.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
