[project]
authors = [
    {name = "Ramses de Beer", email = "ramsesdebeer@gmail.com"},
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "celery[redis]<6.0.0,>=5.4.0",
    "openrelik-worker-common<1.0.0,>=0.16.0",
    "openrelik-common>=0.7.0,<1.0.0",
    "debugpy>=1.8.7,<2.0.0",
]
name = "openrelik-worker-extraction"
version = "0.4.0"
description = "Extract forensic artifacts with image_export"
readme = "README.md"

[dependency-groups]
test = [
    "pytest",
    "pytest-cov<6.0.0,>=5.0.0",
]

[tool.uv]
default-groups = []